--- a/public/signup.html
+++ b/public/signup.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset=utf-8>
+  <meta charset="utf-8">
   <title>Yodlr Registration Portal</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="container mt-5">
   <h1>Yodlr Registration Portal</h1>
-  <form>
-    Email: <input type="email" name="email"></br>
-    <button type="submit">Submit</button>
+  <form id="registrationForm">
+    <div class="form-group">
+      <label for="firstName">First Name:</label>
+      <input type="text" class="form-control" id="firstName" name="firstName" required>
+    </div>
+    <div class="form-group">
+      <label for="lastName">Last Name:</label>
+      <input type="text" class="form-control" id="lastName" name="lastName" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="state">State:</label>
+      <select class="form-control" id="state" name="state">
+        <option value="pending">Pending</option>
+        <option value="active">Active</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-  <p>
+  <p class="mt-3">
     <a href="/admin.html">Admin Page</a>
   </p>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="signup.js"></script>
 </body>
 </html>
